--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "jsx-loader": "^0.13.2",
         "react": "^15.6.1",
         "react-dom": "^15.6.1",
+        "react-router-dom": "^4.2.0",
         "style-loader": "^0.18.2",
         "url-loader": "^0.5.9"
     },
