--- a/package.json
+++ b/package.json
@@ -14,13 +14,17 @@
         "babel-loader": "^7.1.2",
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-react": "^6.24.1",
+        "bootstrap": "^4.0.0-alpha.6",
         "css-loader": "^0.28.5",
         "express": "^4.15.4",
         "file-loader": "^0.11.2",
         "jsx-loader": "^0.13.2",
         "react": "^15.6.1",
+        "react-addons-css-transition-group": "^15.6.0",
+        "react-addons-transition-group": "^15.6.0",
         "react-dom": "^15.6.1",
         "react-router-dom": "^4.2.0",
+        "reactstrap": "^4.8.0",
         "style-loader": "^0.18.2",
         "url-loader": "^0.5.9"
     },
