--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
         "babel-loader": "^7.1.2",
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-react": "^6.24.1",
+        "cookie-session": "^1.3.0",
         "css-loader": "^0.28.5",
         "express": "^4.15.4",
         "file-loader": "^0.11.2",
         "jsx-loader": "^0.13.2",
+        "mongoose": "^4.11.8",
+        "passport": "^0.4.0",
+        "passport-google-oauth20": "^1.0.0",
         "react": "^15.6.1",
         "react-dom": "^15.6.1",
         "react-router-dom": "^4.2.0",
