--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "author": "Chloe Brz",
     "license": "ISC",
     "dependencies": {
+        "axios": "^0.16.2",
         "babel-core": "^6.26.0",
         "babel-loader": "^7.1.2",
         "babel-preset-es2015": "^6.24.1",
@@ -28,7 +29,10 @@
         "passport-google-oauth20": "^1.0.0",
         "react": "^15.6.1",
         "react-dom": "^15.6.1",
+        "react-redux": "^5.0.6",
         "react-router-dom": "^4.2.0",
+        "redux": "^3.7.2",
+        "redux-thunk": "^2.2.0",
         "style-loader": "^0.18.2",
         "url-loader": "^0.5.9"
     },
