--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "babel-loader": "^7.1.2",
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-react": "^6.24.1",
+        "body-parser": "^1.17.2",
         "cookie-session": "^1.3.0",
         "css-loader": "^0.28.5",
         "express": "^4.15.4",
