--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "passport-google-oauth20": "^1.0.0",
         "react": "^15.6.1",
         "react-dom": "^15.6.1",
+        "react-image-file": "^0.1.0",
         "react-redux": "^5.0.6",
         "react-router-dom": "^4.2.0",
         "redux": "^3.7.2",
