--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "file-loader": "^0.11.2",
         "fs": "0.0.1-security",
         "jsx-loader": "^0.13.2",
+        "mongodb": "^2.2.31",
         "mongoose": "^4.11.8",
         "passport": "^0.4.0",
         "passport-google-oauth20": "^1.0.0",
