--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "mongoose": "^4.11.8",
         "passport": "^0.4.0",
         "passport-google-oauth20": "^1.0.0",
+        "prop-types": "^15.5.10",
         "react": "^15.6.1",
         "react-dom": "^15.6.1",
         "react-image-file": "^0.1.0",
