--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "express": "^4.15.4",
         "file-loader": "^0.11.2",
         "fs": "0.0.1-security",
+        "html-loader": "^0.5.1",
         "jsx-loader": "^0.13.2",
         "lodash": "^4.17.4",
         "mongodb": "^2.2.31",
