--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "react-image-file": "^0.1.0",
         "react-modal": "^2.2.4",
         "react-redux": "^5.0.6",
+        "react-responsive-carousel": "^3.1.25",
         "react-router-dom": "^4.2.0",
         "redux": "^3.7.2",
         "redux-thunk": "^2.2.0",
@@ -46,6 +47,7 @@
         "url-loader": "^0.5.9"
     },
     "devDependencies": {
+        "babel-preset-stage-1": "^6.24.1",
         "babel-preset-stage-2": "^6.24.1",
         "webpack": "^3.5.5"
     }
