--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     },
     "scripts": {
         "start": "node server/index.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "jest"
     },
     "author": "Chloe Brz",
     "license": "ISC",
@@ -47,8 +47,15 @@
         "url-loader": "^0.5.9"
     },
     "devDependencies": {
+        "babel-jest": "^20.0.3",
+        "babel-preset-stage-0": "^6.24.1",
         "babel-preset-stage-1": "^6.24.1",
         "babel-preset-stage-2": "^6.24.1",
+        "expect": "^1.20.2",
+        "identity-obj-proxy": "^3.0.0",
+        "jest": "^20.0.4",
+        "nock": "^9.0.14",
+        "redux-mock-store": "^1.2.3",
         "webpack": "^3.5.5"
     }
 }
