--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     },
     "scripts": {
         "start": "node server/index.js",
-        "test": "jest"
+        "test-app": "jest",
+        "test-server": "export NODE_ENV=test && mocha server/**/*.test.js"
     },
     "author": "Chloe Brz",
     "license": "ISC",
@@ -54,8 +55,11 @@
         "expect": "^1.20.2",
         "identity-obj-proxy": "^3.0.0",
         "jest": "^20.0.4",
+        "mocha": "^3.5.0",
         "nock": "^9.0.14",
         "redux-mock-store": "^1.2.3",
+        "sinon": "^3.2.1",
+        "supertest": "^3.0.0",
         "webpack": "^3.5.5"
     }
 }
