--- a/package.json
+++ b/package.json
@@ -48,7 +48,8 @@
         "redux": "^3.7.2",
         "redux-thunk": "^2.2.0",
         "style-loader": "^0.18.2",
-        "url-loader": "^0.5.9"
+        "url-loader": "^0.5.9",
+        "validator": "^8.1.0"
     },
     "devDependencies": {
         "babel-jest": "^20.0.3",
