--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "babel-loader": "^7.1.2",
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-react": "^6.24.1",
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.17.2",
         "cookie-session": "^1.3.0",
         "css-loader": "^0.28.5",
@@ -36,6 +37,7 @@
         "mongoose": "^4.11.8",
         "passport": "^0.4.0",
         "passport-google-oauth20": "^1.0.0",
+        "passport-local": "^1.0.0",
         "prop-types": "^15.5.10",
         "proxyquire": "^1.8.0",
         "react": "^15.6.1",
