--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "babel-preset-react": "^6.24.1",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.17.2",
+        "connect-flash": "^0.1.1",
         "cookie-session": "^1.3.0",
         "css-loader": "^0.28.5",
         "express": "^4.15.4",
