--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "react-responsive-carousel": "^3.1.25",
         "react-router-dom": "^4.2.0",
         "redux": "^3.7.2",
+        "redux-form": "^7.0.4",
         "redux-thunk": "^2.2.0",
         "style-loader": "^0.18.2",
         "url-loader": "^0.5.9",
