--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "css-loader": "^0.28.5",
         "express": "^4.15.4",
         "file-loader": "^0.11.2",
+        "font-awesome": "^4.7.0",
         "fs": "0.0.1-security",
         "html-loader": "^0.5.1",
         "jsx-loader": "^0.13.2",
