--- a/package.json
+++ b/package.json
@@ -24,13 +24,12 @@
         "babel-preset-react": "^6.24.1",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.17.2",
-        "connect-flash": "^0.1.1",
         "cookie-session": "^1.3.0",
         "css-loader": "^0.28.5",
         "express": "^4.15.4",
         "file-loader": "^0.11.2",
         "font-awesome": "^4.7.0",
-        "fs": "0.0.1-security",
+        "gridfs-stream": "^1.1.1",
         "html-loader": "^0.5.1",
         "jsx-loader": "^0.13.2",
         "lodash": "^4.17.4",
@@ -45,7 +44,6 @@
         "proxyquire": "^1.8.0",
         "react": "^15.6.1",
         "react-dom": "^15.6.1",
-        "react-image-file": "^0.1.0",
         "react-modal": "^2.2.4",
         "react-redux": "^5.0.6",
         "react-responsive-carousel": "^3.1.25",
@@ -54,16 +52,10 @@
         "redux-form": "^7.0.4",
         "redux-thunk": "^2.2.0",
         "style-loader": "^0.18.2",
-        "url-loader": "^0.5.9",
-        "validator": "^8.1.0"
+        "url-loader": "^0.5.9"
     },
     "devDependencies": {
-        "babel-jest": "^20.0.3",
-        "babel-preset-stage-0": "^6.24.1",
-        "babel-preset-stage-1": "^6.24.1",
-        "babel-preset-stage-2": "^6.24.1",
         "expect": "^1.20.2",
-        "identity-obj-proxy": "^3.0.0",
         "jest": "^20.0.4",
         "mocha": "^3.5.0",
         "nock": "^9.0.14",
