--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "babel-loader": "^7.1.2",
         "babel-preset-es2015": "^6.24.1",
         "babel-preset-react": "^6.24.1",
+        "babel-preset-stage-1": "^6.24.1",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.17.2",
         "cookie-session": "^1.3.0",
