--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "moment": "^2.18.1",
         "mongodb": "^2.2.31",
         "mongoose": "^4.11.8",
+        "multer": "^1.3.0",
         "nodemailer": "^4.1.0",
         "passport": "^0.4.0",
         "passport-google-oauth20": "^1.0.0",
